--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-outerWorld's GitHub Page
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<meta http-equiv="Content-Language" content="zh-cn"/>
+		<meta name="robots" content="all"/>
+		<title>outerWorld's world</title>
+		<link rel="stylesheet" type="text/css" href="/doomtool.css" />
+	</head>
+	<body>
+	<div id="wrapper">
+		<div id="logo">
+			<a href="/"></a>
+		</div>
+		<div id="nav_first">
+			<ul id="menu">
+			<li id="i"><a id="current" onClick="">个人介绍(Introduction)</a></li>
+			<li id="s"><a onClick="">积累（Doings）</a></li>
+			<li id="l"><a onClick="">语言切换(LanguageSwitch)</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>Copyright outerWorld.github.com</p>
+		</div>
+	</div>
+	</body>
+</html>
