add relative path for resources

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Language" content="zh-cn"/>
 		<meta name="robots" content="all"/>
 		<title>outerWorld's world</title>
-		<link rel="stylesheet" type="text/css" href="/doomtool.css" />
+		<link rel="stylesheet" type="text/css" href="/doomtool/doomtool.css" />
 	</head>
 	<body>
 	<div id="wrapper">
