add a little content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
 			<li id="l"><a onClick="">语言切换(LanguageSwitch)</a></li>
 			</ul>
 		</div>
+		<div id="my_intro">
+			<p>基本信息</p>
+			<div id="my_infor">
+				<p>名字：黄春平</p>
+				<p>邮箱：chunping.huang.china@gmail.com</p>
+				<p>QQ: 410049473 </p>
+				<p>工作地点：北京</p>
+				<p>兴趣爱好：</p>
+			</div>
+		</div>
+		<div id="my_latest">
+			<p>近况</p>
+			<ul>
+				<li>学习django</li>
+				<li>学习Python</li>
+			<ul>
+		</div>
 		<div id="footer">
 			<p>Copyright outerWorld.github.com</p>
 		</div>
