--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 		<meta http-equiv="Content-Language" content="zh-cn"/>
 		<meta name="robots" content="all"/>
 		<title>outerWorld's world</title>
-		<link rel="stylesheet" type="text/css" href="/doomtool/doomtool.css" />
+		<link rel="stylesheet" type="text/css" href="/css/doomtool.css" />
 	</head>
 	<body>
 	<div id="wrapper">
 		<div id="logo">
-			<a href="/"></a>
+			<img src="/image/outerWorld_logo.png"/>
 		</div>
 		<div id="nav_first">
 			<ul id="menu">
-			<li id="i"><a id="current" onClick="">个人介绍(Introduction)</a></li>
-			<li id="s"><a onClick="">积累（Doings）</a></li>
-			<li id="l"><a onClick="">语言切换(LanguageSwitch)</a></li>
+			<li id="i"><a id="current" onClick="">个人资料（Details）</a></li>
+			<li id="s"><a onClick="">历程（Doings）</a></li>
+			<li id="l"><a onClick="">英文版（English Version）</a></li>
 			</ul>
 		</div>
 		<div id="my_intro">
 			<p>基本信息</p>
 			<div id="my_infor">
-				<p>名字：黄春平</p>
-				<p>邮箱：chunping.huang.china@gmail.com</p>
-				<p>QQ: 410049473 </p>
-				<p>工作地点：北京</p>
-				<p>兴趣爱好：</p>
+				<div id="myname"><p>名字：黄春平</p></div>
+				<div id="mail"><p>邮箱：chunping.huang.china@gmail.com</p></div>
+				<div id="qq"><p>QQ: 410049473 </p></div>
+				<div id="work-location"><p>工作地点：北京</p></div>
+				<div id="interest"><p>兴趣爱好：读书、写代码</p></div>
 			</div>
 		</div>
 		<div id="my_latest">
@@ -34,6 +34,7 @@
 			<ul>
 				<li>学习django</li>
 				<li>学习Python</li>
+				<li>看《Unix环境高级编程》</li>
 			<ul>
 		</div>
 		<div id="footer">
