add relative path to website

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="Content-Language" content="zh-cn"/>
 		<meta name="robots" content="all"/>
 		<title>outerWorld's world</title>
-		<link rel="stylesheet" type="text/css" href="/css/doomtool.css" />
+		<link rel="stylesheet" type="text/css" href="/doomtool/css/doomtool.css" />
 	</head>
 	<body>
 	<div id="wrapper">
 		<div id="logo">
-			<img src="/image/outerWorld_logo.png"/>
+			<img src="/doomtool/image/outerWorld_logo.png"/>
 		</div>
 		<div id="nav_first">
 			<ul id="menu">
