change display structure

--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
 		<div id="logo">
 			<img src="/doomtool/image/outerWorld_logo.png"/>
 		</div>
-		<div id="nav_first">
-			<ul id="menu">
-			<li id="i"><a id="current" onClick="">个人资料（Details）</a></li>
-			<li id="s"><a onClick="">历程（Doings）</a></li>
-			<li id="l"><a onClick="">英文版（English Version）</a></li>
-			</ul>
-		</div>
 		<div id="my_intro">
 			<p>基本信息</p>
 			<div id="my_infor">
@@ -27,7 +20,16 @@
 				<div id="qq"><p>QQ: 410049473 </p></div>
 				<div id="work-location"><p>工作地点：北京</p></div>
 				<div id="interest"><p>兴趣爱好：读书、写代码</p></div>
+				<div><p>学历：大学本科</p></div>
+				<div><p>联系电话：134xxxxxxxx</p></div>
 			</div>
+		</div>
+		<div id="nav_first">
+			<ul id="menu">
+			<li id="i"><a id="current" onClick="">个人资料（Details）</a></li>
+			<li id="s"><a onClick="">历程（Doings）</a></li>
+			<li id="l"><a onClick="">英文版（English Version）</a></li>
+			</ul>
 		</div>
 		<div id="my_latest">
 			<p>近况</p>
