--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 		<meta http-equiv="Content-Language" content="zh-cn"/>
 		<meta name="robots" content="all"/>
 		<title>outerWorld's world</title>
-		<link rel="stylesheet" type="text/css" href="/css/doomtool.css" />
+		<link rel="stylesheet" type="text/css" href="/doomtool/css/doomtool.css" />
 	</head>
 	<body>
 	<div id="main">
 	<div id="left"></div> <!-- css left -->
 	<div id="middle">
 		<div id="logo">
-			<!--img src="/doomtool/image/outerWorld_logo.png"/-->
-			<!--img src="/image/outerWorld_logo.v2.png"/-->
 		</div>
 		<div id="substract">
 			<div id="my_infor">
