--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
 		<div id="logo">
 		</div>
 		<div id="substract">
-			<div id="my_infor">
-				<div id="myname"><p>名字：黄春平</p></div>
-				<div id="mail"><p>邮箱：chunping.huang.china@gmail.com</p></div>
-				<div id="qq"><p>QQ: 410049473 </p></div>
-				<div id="work-location"><p>工作地点：北京</p></div>
-				<div id="interest"><p>兴趣爱好：读书、写代码</p></div>
-				<div><p>学历：大学本科</p></div>
-				<div><p>联系电话：134xxxxxxxx</p></div>
-			</div>
+			<ul>
+				<li>名字：</li><li>黄春平</li>
+				<li>邮箱：</li><li>chunping.huang.china@gmail.com</li>
+			</ul>
+			<ul>
+				<li>QQ: </li><li>410049473</li>
+				<li>工作地点：</li><li>北京</li>
+			</ul>
+			<ul>
+				<li>兴趣爱好：</li><li>读书、写代码</li>
+				<li>学历：</li><li>大学本科</li>
+			</ul>
+			<ul>
+				<li>联系电话：</li><li>134xxxxxxxx</li>
+			</ul>
 		</div>
-		<div id="navigator">
-			<ul id="menu">
+		<div id="menu">
+			<ul>
 			<li id="i"><a id="current" onClick="">个人资料（Details）</a></li>
 			<li id="s"><a onClick="">历程（Doings）</a></li>
 			<li id="l"><a onClick="">英文版（English Version）</a></li>
