more perfect now

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="robots" content="all"/>
 		<title>outerWorld's world</title>
 		<link rel="stylesheet" type="text/css" href="/doomtool/css/doomtool.css" />
+		<link rel="stylesheet" type="text/css" href="/css/doomtool.css" />
 	</head>
 	<body>
 	<div id="main">
@@ -15,41 +16,55 @@
 		</div>
 		<div id="substract">
 			<ul>
-				<li>名字：</li><li>黄春平</li>
-				<li>邮箱：</li><li>chunping.huang.china@gmail.com</li>
+				<li class="fst_li">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;字：</li><li class="sec_li">黄春平</li>
+				<li class="fst_li">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</li><li class="sec_li">chunping.huang.china@gmail.com</li>
 			</ul>
 			<ul>
-				<li>QQ: </li><li>410049473</li>
-				<li>工作地点：</li><li>北京</li>
+				<li class="fst_li">联系电话：</li><li class="sec_li">134xxxxxxxx</li>
+				<li class="fst_li">QQ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: </li><li class="sec_li">410049473</li>
 			</ul>
 			<ul>
-				<li>兴趣爱好：</li><li>读书、写代码</li>
-				<li>学历：</li><li>大学本科</li>
+				<li class="fst_li">兴趣爱好：</li><li class="sec_li">读书、写代码</li>
+				<li class="fst_li">学&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;历：</li><li class="sec_li">大学本科</li>
 			</ul>
 			<ul>
-				<li>联系电话：</li><li>134xxxxxxxx</li>
+				<li class="fst_li">工作地点：</li><li class="sec_li">北京</li>
 			</ul>
 		</div>
 		<div id="menu">
 			<ul>
-			<li id="i"><a id="current" onClick="">个人资料（Details）</a></li>
-			<li id="s"><a onClick="">历程（Doings）</a></li>
-			<li id="l"><a onClick="">英文版（English Version）</a></li>
+				<li><a href="" onClick="">个人信息</a></li>
+				<li><a href="" onClick="">历程</a></li>
+				<li><a href="" onClick="">英文版</a></li>
 			</ul>
 		</div>
 		<div id="content">
-			<p>近况</p>
-			<ul>
-				<li>学习django</li>
-				<li>学习Python</li>
-				<li>看《Unix环境高级编程》</li>
-			<ul>
+			<div id="skills">
+				<ul>
+					<li>专业技能</li>
+				</ul>
+			</div>
+			<div id="experience">
+				<ul>
+					<li>工作经历</li>
+				</ul>
+			</div>
+			<div id="latest">
+				<ul>
+					<li>近况</li>
+				</ul>
+				<ul>
+					<li>学习django</li>
+					<li>学习Python</li>
+					<li>看《Unix环境高级编程》</li>
+				<ul>
+			</div>
 		</div>
 	</div> <!-- css middle -->
 	<div id="right"> </div> <!-- css right -->
 	</div> <!-- css main -->
 	<div id="footer">
-		<p>Copyright outerWorld.github.com</p>
+		<p>感谢github.com!</p>
 	</div>
 	</body>
 </html>
