more perfect now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</ul>
 			<ul>
 				<li class="fst_li">联系电话：</li><li class="sec_li">134xxxxxxxx</li>
-				<li class="fst_li">QQ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: </li><li class="sec_li">410049473</li>
+				<li class="fst_li">QQ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;： </li><li class="sec_li">410049473</li>
 			</ul>
 			<ul>
 				<li class="fst_li">兴趣爱好：</li><li class="sec_li">读书、写代码</li>
@@ -33,9 +33,9 @@
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="" onClick="">个人信息</a></li>
-				<li><a href="" onClick="">历程</a></li>
-				<li><a href="" onClick="">英文版</a></li>
+				<li><a href="#" onClick="">个人信息</a></li>
+				<li><a href="#" onClick="">历程</a></li>
+				<li><a href="#" onClick="">英文版</a></li>
 			</ul>
 		</div>
 		<div id="content">
@@ -43,10 +43,20 @@
 				<ul>
 					<li>专业技能</li>
 				</ul>
+				<ul>
+					<li class="sec_li">熟悉C/C++/Python</li>
+					<li class="sec_li">熟悉Redis/Mysql</li>
+					<li class="sec_li">熟悉网络开发、libpcap库</li>
+				</ul>
 			</div>
 			<div id="experience">
 				<ul>
 					<li>工作经历</li>
+				</ul>
+				<ul>
+					<li>2011.3~至今	亿赞普网络技术有限公司</li>
+					<li class="sec_li">岗位：C高级开发工程师 </li>
+					<li class="sec_li">职责</li>
 				</ul>
 			</div>
 			<div id="latest">
@@ -54,9 +64,6 @@
 					<li>近况</li>
 				</ul>
 				<ul>
-					<li>学习django</li>
-					<li>学习Python</li>
-					<li>看《Unix环境高级编程》</li>
 				<ul>
 			</div>
 		</div>
