add more information

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			</ul>
 			<ul>
 				<li class="fst_li">工作地点：</li><li class="sec_li">北京</li>
+				<li class="fst_li">工作年限：</li><li class="sec_li">4.5年</li>
 			</ul>
 		</div>
 		<div id="menu">
@@ -39,9 +40,19 @@
 			</ul>
 		</div>
 		<div id="content">
+			<div id="education">
+				<ul>
+					<li class="item_name">教育背景<li>
+				</ul>
+				<ul>
+					<li class="sec_li">
+						2004.9~2008.7 <a href="http://www.sut.edu.cn/">沈阳工业大学</a> 测控技术与仪器
+					<li>
+				</ul>
+			</div>
 			<div id="skills">
 				<ul>
-					<li>专业技能</li>
+					<li class="item_name">专业技能</li>
 				</ul>
 				<ul>
 					<li class="sec_li">熟悉C/C++/Python</li>
@@ -51,20 +62,24 @@
 			</div>
 			<div id="experience">
 				<ul>
-					<li>工作经历</li>
+					<li class="item_name">工作经历</li>
 				</ul>
 				<ul>
-					<li>2011.3~至今	亿赞普网络技术有限公司</li>
-					<li class="sec_li">岗位：C高级开发工程师 </li>
-					<li class="sec_li">职责</li>
+					<li class="sec_li">2011.3~至今	<a href="http://www.izptec.com/cn/">亿赞普网络技术（北京）有限公司</a></li>
+					<li class="trd_li">岗&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;位：C高级开发工程师 </li>
+					<li class="trd_li">职&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;责：负责广告后台系统开发及维护</li>
+					<li class="trd_li">工作内容：</li>
+					<li class="trd_li">业&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;绩：</li>
 				</ul>
 			</div>
 			<div id="latest">
 				<ul>
-					<li>近况</li>
+					<li class="item_name">近况</li>
 				</ul>
 				<ul>
-				<ul>
+					<li class="sec_li">研究python网络框架django</li>
+					<li class="sec_li">构建个人C语言开发库<a href="https://github.com/outerWorld/f1goal">libf1goal</a></li>
+				</ul>
 			</div>
 		</div>
 	</div> <!-- css middle -->
