--- a/web-server/goweb/goweb/pages/index.html
+++ b/web-server/goweb/goweb/pages/index.html
@@ -6,11 +6,16 @@
 	<title>宇宙尘埃</title>
 	</head>
 	<body>
-	<div class="container" id="header">
+	<div id="container">
+		<div id="header">Header</div>
+		<div id="nav">
+		</div>
+		<div id="content">
+		</div>
+		<div class="clearfooter"></div>
 	</div>
-	<div class="container" id="mid">
-	</div>
-	<div class="container" id="footer">
+	<div id="footer">
+		权力的终结者是大自然！
 	</div>
 	</body>
 </html>
