--- a/web-server/goweb/goweb/pages/index.html
+++ b/web-server/goweb/goweb/pages/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -6,16 +5,90 @@
 	<title>宇宙尘埃</title>
 	</head>
 	<body>
-	<div id="container">
-		<div id="header">Header</div>
-		<div id="nav">
+	<div id="main">
+		<div id="fixed_top">
+			<div id="logo"></div>
+			<div id="nav">
+				<div id="nav_left">
+					<ul>
+						<li><a href="#network">网络技术</a></li>
+						<li><a href="#datamine">数据挖掘技术</a></li>
+						<li><a href="#softsafe">软件安全技术</a></li>
+						<li><a href="#datalg">数据结构及算法</a></li>
+					</ul>
+				</div>
+				<div id="nav_right">
+					<ul>
+						<li><a href="http://blog.deephex.com/">我的博客</a></li>
+						<li><a href="">给我留言</a></li>
+					</ul>
+				</div>
+			</div>
+			<div id="fixed_top_sep">
+			</div>
 		</div>
 		<div id="content">
+			<div id="main_content">
+				<div id="subject_list">
+					<div class="subject">
+						<div class="subject_name"><ul><li id="network"> 网络技术</li></ul> </div>
+						<div class="subject_item">
+							<ul>
+								<li class="title"><a href=""> sniffer代码剖析</a></li>
+								<li class="desc">创建时间:2013-02-03 10:00:00，更新时间：2013-03-01 08:04:00 评论人：黄</li>
+							</ul>
+						</div>
+						<div class="subject_item">
+							<ul>
+								<li class="title"><a href=""> libpcap代码剖析</a></li>
+								<li class="desc">创建时间:2013-02-03 10:00:00，更新时间：2013-03-01 08:04:00 评论人：黄</li>
+							</ul>
+						</div>
+						<div class="subject_item">
+							<ul>
+								<li class="title"><a href=""> nmap代码剖析</a></li>
+								<li class="desc">创建时间:2013-02-03 10:00:00，更新时间：2013-03-01 08:04:00 评论人：黄</li>
+							<ul>
+						</div>
+					</div>
+					
+					<div class="subject">
+					<div class="subject_name"><ul><li id="datamine">数据挖掘技术</li></ul> </div>
+						<div class="subject_item">
+							<ul>
+								<li class="title"><a href="">分词算法及应用</a></li>
+								<li class="desc">创建时间:2013-02-03 10:00:00，更新时间：2013-03-01 08:04:00 评论人：黄</li>
+							</ul>
+						</div>
+						<div class="subject_item">
+							<ul>
+								<li class="title"><a href="">马尔可夫模型</a></li>
+								<li class="desc">创建时间:2013-02-03 10:00:00，更新时间：2013-03-01 08:04:00 评论人：黄</li>
+							</ul>
+						</div>
+						<div class="subject_item">
+							<ul>
+								<li class="title"><a href="">分句算法及应用</a></li>
+								<li class="desc">创建时间:2013-02-03 10:00:00，更新时间：2013-03-01 08:04:00 评论人：黄</li>
+							<ul>
+						</div>
+					</div>
+				</div>
+				<div class="subject">
+					<div class="subject_name"><ul><li id="softsafe">软件安全技术</li></ul> </div>
+				</div>
+				<div class="subject">
+					<div class="subject_name"><ul><li id="datalg">数据结构及算法</li></ul> </div>
+				</div>
+
+			</div>
+			<div id="sub_content">
+			</div>
 		</div>
 		<div class="clearfooter"></div>
-	</div>
-	<div id="footer">
-		权力的终结者是大自然！
+		<div id="footer">
+		<p>大自然是权力的终结者</p>
+		</div>
 	</div>
 	</body>
 </html>
